--- a/man/aa-lsm-hook-compile.8.html
+++ b/man/aa-lsm-hook-compile.8.html
@@ -94,7 +94,7 @@ by the service file.</p>
 <h2 id="COPYRIGHT">COPYRIGHT</h2>
 
 <ul>
-<li>Copyright © 2018 Solus Project, License: CC-BY-SA-3.0</li>
+<li>Copyright © 2018-2019 Solus Project, License: CC-BY-SA-3.0</li>
 </ul>
 
 
